# ROS-Bare-Bones-Sub

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  run.sh
apps/: ros_bare_bones_sub_nodelet.cpp
docker/: docker_build.sh  docker_run.sh
docker/melodic/: Dockerfile
docker/noetic/: Dockerfile
include/: colors.hpp  utils.hpp
launch/: ros_bare_bones_sub.launch
