<?xml version="1.0"?>
<package>
    <name>ros_bare_bones_sub</name>
    <version>0.0.0</version>
    <description>ROS Bare Bones Package</description>

    <maintainer email="arghadeep25@gmail.com">Arghadeep</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>nodelet</run_depend>
    <run_depend>roscpp</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    </export>
</package>
